# openotter

./: .gitignore  README.md  README_CN.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: build-sidecar.py  rename-sidecar.js  setup-dev-sidecar.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_manager.rs  claw3d.rs  commands.rs  config.rs  credential_pool.rs  evolution_watcher.rs  gateway_manager.rs  hermes_installer.rs  lib.rs  main.rs  model_manager.rs  session_search.rs  sidecar.rs  web_server.rs
src/components/Agents/: AgentCreateWizard.tsx  AgentDetailView.tsx  AgentEvolutionPanel.tsx  AgentsListView.tsx  PersonalityEditor.tsx
src/components/Channels/: ChannelsView.tsx
src/components/Chat/: ChatInput.tsx  ChatView.tsx  MessageBubble.tsx
src/components/Claw3D/: Claw3DView.tsx
src/components/Credentials/: CredentialsView.tsx
src/components/Cron/: CronView.tsx
src/components/Dashboard/: DashboardView.tsx
src/components/Env/: EnvView.tsx
src/components/Layout/: Sidebar.tsx
src/components/MCP/: McpView.tsx
src/components/Memory/: MemoryView.tsx
src/components/Models/: ModelsView.tsx
src/components/Plugins/: PluginsView.tsx
src/components/Profiles/: ProfilesView.tsx
src/components/Sessions/: SessionSearch.tsx
src/components/Settings/: SettingsView.tsx
src/lib/: agent-templates.ts  hermes-api.ts  hermes-bridge.ts
src/stores/: agentStore.ts  appStore.ts  chatStore.ts
(+3 files in other folders)
